--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-json-pretty": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "reactstrap": "^8.6.0"
+    "reactjs-popup": "^2.0.4",
+    "reactstrap": "^8.6.0",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
